objects/IS_Business_Process__c.object
<CustomObject>
    <description>Used to record details of a business process.</description>
    <fields>
        <fullName>Active_User_Assignment__c</fullName>
        <formula>IF( 
  AND( 
    OR(ISBLANK(BOA__c),BOA__r.IsActive), 
    OR(ISBLANK(Business_Process_Contact__c),Business_Process_Contact__r.IsActive), 
    OR(ISBLANK(SME__c),SME__r.IsActive)) = FALSE, 
  IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Inactive&apos;) &amp; &apos; Inactive User Assigned&apos;, 
  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Active&apos;) &amp; &apos; All Active&apos; 
)</formula>
        <inlineHelpText>Indicates if at least one of the assigned users is inactive</inlineHelpText>
        <label>Active User Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BOA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Practices__c</fullName>
        <label>Best Practices</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Process_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate the business contact for the specific process, if different from the main System Business Contact</inlineHelpText>
        <label>Business Process Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality__c</fullName>
        <formula>IF(TODAY()-DATEVALUE(LastModifiedDate) &gt; 180, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Over 180 Days old&quot;) &amp; &apos; Stale - Over 180 Days&apos;, 
IF(TODAY()-DATEVALUE(LastModifiedDate) &gt; 90, 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Over 90 Days old&quot;) &amp; &apos; Aging - Over 90 Days&apos;, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Fresh Data!&quot;) &amp; &apos; Fresh - Within 90 Days&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates how recently a record has been updated</inlineHelpText>
        <label>Data Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Launch_Date__c</fullName>
        <label>Initial Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Items_to_Test__c</fullName>
        <inlineHelpText>Common problem areas</inlineHelpText>
        <label>Items to Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Known_Issues_Limitations__c</fullName>
        <label>Known Issues / Limitations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <inlineHelpText>Date of most recent Versioned update of a related Use Case</inlineHelpText>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_in_App__c</fullName>
        <label>Location in App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Service_Date__c</fullName>
        <label>Out of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Business Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Process</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_Business_Process__c</referenceTo>
        <relationshipLabel>Child IS Business Processes</relationshipLabel>
        <relationshipName>IS_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <label>Primary Department</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Support and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC  Technical Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Number__c</fullName>
        <description>Combine with parent System Number for System Junction Number</description>
        <displayFormat>BP-{000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QA_Regression_Notes__c</fullName>
        <label>QA/Regression Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Business_Processes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Business Subject Matter Expert</inlineHelpText>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Business_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Documentation__c</fullName>
        <label>Support Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_App_Location_s__c</fullName>
        <label>Test App Location(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Application_URL__c</fullName>
        <label>Test Application URL</label>
        <type>Url</type>
    </fields>
    <label>IS Business Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Process_Contact__c</columns>
        <columns>BOA__c</columns>
        <columns>SME__c</columns>
        <columns>Parent_Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Process_Contact__c</columns>
        <columns>BOA__c</columns>
        <columns>SME__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_Pilot</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Process_Contact__c</columns>
        <columns>BOA__c</columns>
        <columns>SME__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pilot</value>
        </filters>
        <label>All Pilot</label>
    </listViews>
    <nameField>
        <label>IS Business Process</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IS Business Processes</pluralLabel>
    <recordTypes>
        <fullName>App_Service</fullName>
        <active>false</active>
        <description>An application service, such as an API or a group of related jobs</description>
        <label>App Service (Inactive)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Process</fullName>
        <active>true</active>
        <description>A process involving people and their interaction with applications to accomplish a business goal</description>
        <label>Business Process</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Initial_Launch_Date_Required</fullName>
        <active>true</active>
        <description>Initial Launch Date is required when Status = Active</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Active&apos;),ISBLANK(Initial_Launch_Date__c))</errorConditionFormula>
        <errorDisplayField>Initial_Launch_Date__c</errorDisplayField>
        <errorMessage>Initial Launch Date is required when Status = Active</errorMessage>
    </validationRules>
</CustomObject>